[package]
name = "types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
japanese = { path = "../japanese", optional = true}
localization = { path = "../localization", optional = true }
### Note: This sub-crate is not allowed to have dependencies to other Jotoba crates, unless its only used if `jotoba_intern` is enabled.
jp_inflections = { git = "https://github.com/JojiiOfficial/Japanese_Inflections", optional=true }
#jp_inflections = { path ="../../../jp_inflections", optional=true}
jp_utils = { git = "https://github.com/JojiiOfficial/jp_utils", features = ["furigana"] }
strum = { version = "0.25.0", features = ["derive"] }
strum_macros = "0.25.1"
serde = { version = "1.0.171", features = ["derive"] }
bitflags = { git = "https://github.com/JojiiOfficial/BitFlags" }
itertools = "0.11.0"

[features]
default = ["api"]

# This feature adds stuff required for Jotoba to work but not necessarily for extern crates, so its made optional
jotoba_intern = ["localization", "api", "jp_inflections", "japanese"]

# Contains API types, and can be used as rust wrapper around the Jotoba API
api = []

raw_types = []

[dev-dependencies]
test-case = "3.1.0"
